Fix the grid getting cropped after panning/zooming

--- a/www/style.css
+++ b/www/style.css
@@ -50,6 +50,7 @@ h1.instrument {
   width: 100%;
   height: 100%;
   position: absolute;
+  overflow: visible;
   z-index: -1;
 }
 
